2008-07-16  Michael Goffioul  <michael.goffioul@gmail.com>

	* configure.in: Add check for pthread.h.

2008-07-14  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (MAGICK_CONFIG): Substitute here.
	(MAGICK_INCFLAGS, MAGICK_LIBS): Define using GraphicsMagick++
	config script.
	(do-subst-config-vals): Include MAGICK_LIBS and MAGICK_INCFLAGS in
	list of substitutions.
	* configure.in: Check for GraphicsMagick++ config script.

2008-07-10  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (DIRS_TO_MAKE): Delete $(localfcnfilepath) and
	$(localoctfilepath) from the list.  Include $(datadir)
	$(localfcnfiledir) $(localapifcnfiledir) $(localverfcnfiledir)
	$(localoctfiledir) $(localapioctfiledir) $(localveroctfiledir)
	$(imagedir) and $(localapiarchlibdir) in the list.

	* configure.in: Look for FTGL/ftgl.h instead of FTGL/FTGL.h.  Also
	look for ftgl.h.

2008-07-10  Michael Goffioul  <michael.goffioul@gmail.com>

	* configure.in: new substituted variables GL_RENDER_SRC and
	FLTK_BACKEND_SRC.

2008-06-20  Michael Goffioul <michael.goffioul@gmail.com>

	* Makeconf.in: Add GRAPHICS_CFLAGS substitution.
	* configure.in: Add checks for hypotf and _hypotf.

2008-06-12  Jaroslav Hajek <highegg@gmail.com>

	* configure.in: Move LIBS and CXXFLAGS restoration into
	the proper block.

2008-06-05  John W. Eaton  <jwe@octave.org>

	* configure.in: Add FT2_CFLAGS to XTRA_CXXFLAGS, not CXXFLAGS.
	Don't add FT2_LIBS to LIBS.
	Don't generate src/graphics/Makefile, src/graphics/Makerules,
	src/graphics/opengl/Makefile, or src/graphics/fltk_backend/Makefile.

	* Makeconf.in (FT2_LIBS, GRAPHICS_LIBS): Substitute here.

2008-06-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* configure.in: Use AC_TRY_LINK in FTGL test.
	Include FT_CFLAGS in CXXFLAGS.

	* aclocal.m4 (OCTAVE_OPENGL): Note FIXME for apple.

	* configure.in: Check for FTGL library.

	* configure.in: Remove check for Fl/glu.h header.

	* aclocal.m4 (AC_CHECK_FT2): New macro to check for freetype2.
